--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@uiw/react-md-editor": "^4.0.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "ethers": "^6.15.0",
     "lucide-react": "^0.542.0",
     "markdown-it": "^14.1.0",
     "next": "15.5.2",
